include/xprs.h



/***************************************************************************\
 * Object and reference types                                              *
\***************************************************************************/
typedef struct XPRSobject_s *XPRSobject;

typedef struct xo_prob_struct* XPRSprob;

typedef struct XPRSmipsolpool_s* XPRSmipsolpool;

typedef struct XPRSmipsolenum_s* XPRSmipsolenum;

typedef struct xo_user_branch_entity_s * XPRSbranchobject;


typedef struct PoolCut* XPRScut;

int XPRS_CC XPRSgetbanner(char* banner);

int XPRS_CC XPRSgetversion(char* version);

int XPRS_CC XPRSlicense(int* _i1, char* _c1);

int XPRS_CC XPRSloadlp(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _mstart[], const int _mnel[], const int _mrwind[], const double _dmatval[], const double _dlb[], const double _dub[]);

int XPRS_CC XPRSloaddirs(XPRSprob prob, int ndirs, const int _mcols[], const int _mpri[], const char _sbr[], const double dupc[], const double ddpc[]);

int XPRS_CC XPRSgetsol(XPRSprob prob, double _dx[], double _dslack[], double _dual[], double _dj[]);

int XPRS_CC XPRSgetpresolvesol(XPRSprob prob, double _dx[], double _dslack[], double _dual[], double _dj[]);

int XPRS_CC XPRSgetglobal(XPRSprob prob, int* ngents, int* nsets, char _sgtype[], int _mgcols[], double _dlim[], char _sstype[], int _msstart[], int _mscols[], double _dref[]);

int XPRS_CC XPRSaddrows(XPRSprob prob, int nrows, int ncoeffs, const char _srowtype[], const double _drhs[], const double _drng[], const int _mstart[], const int _mclind[], const double _dmatval[]);

int XPRS_CC XPRSsetcbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p);

int XPRS_CC XPRSgetcbmessage(XPRSprob prob, void (XPRS_CC **f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void** p);

int XPRS_CC XPRSaddcbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p, int priority);

int XPRS_CC XPRSremovecbmessage(XPRSprob prob, void (XPRS_CC *f_message)(XPRSprob prob, void* vContext, const char* msg, int len, int msgtype), void* p);


int XPRS_CC XPRS_ge_setcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_ge_getcbmsghandler(int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_ge_addcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_ge_removecbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_msp_setcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_msp_getcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_msp_addcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_msp_removecbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);


int XPRS_CC XPRS_mse_create(XPRSmipsolenum* mse);

int XPRS_CC XPRS_mse_destroy(XPRSmipsolenum mse);

int XPRS_CC XPRS_mse_getsollist(XPRSmipsolenum mse, int iMetricId, int iRankFirstIndex_Ob, int iRankLastIndex_Ob, int iSolutionIds[], int* nReturnedSolIds, int* nSols);

int XPRS_CC XPRS_mse_getsolmetric(XPRSmipsolenum mse, int iSolutionId, int* iSolutionIdStatus, int iMetricId, double* dMetric);

int XPRS_CC XPRS_mse_getcullchoice(XPRSmipsolenum mse, int iMetricId, int cull_sol_id_list[], int nMaxSolsToCull, int* nSolsToCull, double dNewSolMetric, const double x[], int nCols, int* bRejectSoln);

int XPRS_CC XPRS_mse_minim(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, int (XPRS_CC *f_mse_handler)(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, void* vContext, int* nMaxSols, const double x_Zb[], const int nCols, const double dMipObject, double* dModifiedObject, int* bRejectSoln, int* bUpdateMipAbsCutOffOnCurrentSet), void* p, int* nMaxSols);

int XPRS_CC XPRS_mse_maxim(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, int (XPRS_CC *f_mse_handler)(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, void* vContext, int* nMaxSols, const double x_Zb[], const int nCols, const double dMipObject, double* dModifiedObject, int* bRejectSoln, int* bUpdateMipAbsCutOffOnCurrentSet), void* p, int* nMaxSols);

int XPRS_CC XPRS_mse_opt(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, int (XPRS_CC *f_mse_handler)(XPRSmipsolenum mse, XPRSprob prob, XPRSmipsolpool msp, void* vContext, int* nMaxSols, const double x_Zb[], const int nCols, const double dMipObject, double* dModifiedObject, int* bRejectSoln, int* bUpdateMipAbsCutOffOnCurrentSet), void* p, int* nMaxSols);

int XPRS_CC XPRS_mse_getintattrib(XPRSmipsolenum mse, int iAttribId, int* Val);

int XPRS_CC XPRS_mse_getdblattrib(XPRSmipsolenum mse, int iAttribId, double* Val);

int XPRS_CC XPRS_mse_getintcontrol(XPRSmipsolenum mse, int iAttribId, int* Val);

int XPRS_CC XPRS_mse_getdblcontrol(XPRSmipsolenum mse, int iAttribId, double* Val);

int XPRS_CC XPRS_mse_setintcontrol(XPRSmipsolenum mse, int iAttribId, int Val);

int XPRS_CC XPRS_mse_setdblcontrol(XPRSmipsolenum mse, int iAttribId, double Val);

int XPRS_CC XPRS_mse_getlasterror(XPRSmipsolenum mse, int* iMsgCode, char* _msg, int _iStringBufferBytes, int* _iBytesInInternalString);

int XPRS_CC XPRS_mse_setsolbasename(XPRSmipsolenum mse, const char* sSolutionBaseName);

int XPRS_CC XPRS_mse_getsolbasename(XPRSmipsolenum mse, char* _sname, int _iStringBufferBytes, int* _iBytesInInternalString);

int XPRS_CC XPRS_mse_setcbgetsolutiondiff(XPRSmipsolenum mse, int (XPRS_CC *f_mse_getsolutiondiff)(XPRSmipsolenum mse, void* vContext, int nCols, int iSolutionId_1, int iElemCount_1, double dMipObj_1, const double Vals_1[], const int iSparseIndices_1[], int iSolutionId_2, int iElemCount_2, double dMipObj_2, const double Vals_2[], const int iSparseIndices_2[], double* dDiffMetric), void* p);

int XPRS_CC XPRS_mse_getcbgetsolutiondiff(XPRSmipsolenum mse, int (XPRS_CC **f_mse_getsolutiondiff)(XPRSmipsolenum mse, void* vContext, int nCols, int iSolutionId_1, int iElemCount_1, double dMipObj_1, const double Vals_1[], const int iSparseIndices_1[], int iSolutionId_2, int iElemCount_2, double dMipObj_2, const double Vals_2[], const int iSparseIndices_2[], double* dDiffMetric), void** p);

int XPRS_CC XPRS_mse_addcbgetsolutiondiff(XPRSmipsolenum mse, int (XPRS_CC *f_mse_getsolutiondiff)(XPRSmipsolenum mse, void* vContext, int nCols, int iSolutionId_1, int iElemCount_1, double dMipObj_1, const double Vals_1[], const int iSparseIndices_1[], int iSolutionId_2, int iElemCount_2, double dMipObj_2, const double Vals_2[], const int iSparseIndices_2[], double* dDiffMetric), void* p, int priority);

int XPRS_CC XPRS_mse_removecbgetsolutiondiff(XPRSmipsolenum mse, int (XPRS_CC *f_mse_getsolutiondiff)(XPRSmipsolenum mse, void* vContext, int nCols, int iSolutionId_1, int iElemCount_1, double dMipObj_1, const double Vals_1[], const int iSparseIndices_1[], int iSolutionId_2, int iElemCount_2, double dMipObj_2, const double Vals_2[], const int iSparseIndices_2[], double* dDiffMetric), void* p);

int XPRS_CC XPRS_mse_setcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_mse_getcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_mse_addcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_mse_removecbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);


int XPRS_CC XPRS_bo_create(XPRSbranchobject* p_object, XPRSprob prob, int isoriginal);

int XPRS_CC XPRS_bo_destroy(XPRSbranchobject obranch);

int XPRS_CC XPRS_bo_store(XPRSbranchobject obranch, int* p_status);

int XPRS_CC XPRS_bo_addbranches(XPRSbranchobject obranch, int nbranches);

int XPRS_CC XPRS_bo_getbranches(XPRSbranchobject obranch, int* p_nbranches);

int XPRS_CC XPRS_bo_setpriority(XPRSbranchobject obranch, int ipriority);

int XPRS_CC XPRS_bo_setpreferredbranch(XPRSbranchobject obranch, int ibranch);

int XPRS_CC XPRS_bo_addbounds(XPRSbranchobject obranch, int ibranch, int nbounds, const char cbndtype[], const int mbndcol[], const double dbndval[]);

int XPRS_CC XPRS_bo_getbounds(XPRSbranchobject obranch, int ibranch, int* p_nbounds, int nbounds_size, char cbndtype[], int mbndcol[], double dbndval[]);

int XPRS_CC XPRS_bo_addrows(XPRSbranchobject obranch, int ibranch, int nrows, int nelems, const char crtype[], const double drrhs[], const int mrbeg[], const int mcol[], const double dval[]);

int XPRS_CC XPRS_bo_getrows(XPRSbranchobject obranch, int ibranch, int* p_nrows, int nrows_size, int* p_nelems, int nelems_size, char crtype[], double drrhs[], int mrbeg[], int mcol[], double dval[]);

int XPRS_CC XPRS_bo_addcuts(XPRSbranchobject obranch, int ibranch, int ncuts, const XPRScut mcutind[]);

int XPRS_CC XPRS_bo_getid(XPRSbranchobject obranch, int* p_id);

int XPRS_CC XPRS_bo_getlasterror(XPRSbranchobject obranch, int* iMsgCode, char* _msg, int _iStringBufferBytes, int* _iBytesInInternalString);

int XPRS_CC XPRS_bo_validate(XPRSbranchobject obranch, int* p_status);