include/xprs.bas


Declare PtrSafe Function XPRS_mse_create Lib "XPRS.DLL" (ByRef mse As LongPtr) As Long
Declare PtrSafe Function XPRS_mse_destroy Lib "XPRS.DLL" (ByVal mse As LongPtr) As Long
Declare PtrSafe Function XPRS_mse_getsollist Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iMetricId As Long, ByVal iRankFirstIndex_Ob As Long, ByVal iRankLastIndex_Ob As Long, iSolutionIds As Long, ByRef nReturnedSolIds As Long, ByRef nSols As Long) As Long
Declare PtrSafe Function XPRS_mse_getsolmetric Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iSolutionId As Long, ByRef iSolutionIdStatus As Long, ByVal iMetricId As Long, ByRef dMetric As Double) As Long
Declare PtrSafe Function XPRS_mse_getcullchoice Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iMetricId As Long, cull_sol_id_list As Long, ByVal nMaxSolsToCull As Long, ByRef nSolsToCull As Long, ByVal dNewSolMetric As Double, x As Double, ByVal nCols As Long, ByRef bRejectSoln As Long) As Long
Declare PtrSafe Function XPRS_mse_minim Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal prob As LongPtr, ByVal msp As LongPtr, ByVal f_mse_handler As LongPtr, ByVal p As String, ByRef nMaxSols As Long) As Long
Declare PtrSafe Function XPRS_mse_maxim Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal prob As LongPtr, ByVal msp As LongPtr, ByVal f_mse_handler As LongPtr, ByVal p As String, ByRef nMaxSols As Long) As Long
Declare PtrSafe Function XPRS_mse_opt Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal prob As LongPtr, ByVal msp As LongPtr, ByVal f_mse_handler As LongPtr, ByVal p As String, ByRef nMaxSols As Long) As Long
Declare PtrSafe Function XPRS_mse_getintattrib Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByRef Val As Long) As Long
Declare PtrSafe Function XPRS_mse_getdblattrib Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByRef Val As Double) As Long
Declare PtrSafe Function XPRS_mse_getintcontrol Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByRef Val As Long) As Long
Declare PtrSafe Function XPRS_mse_getdblcontrol Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByRef Val As Double) As Long
Declare PtrSafe Function XPRS_mse_setintcontrol Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByVal Val As Long) As Long
Declare PtrSafe Function XPRS_mse_setdblcontrol Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal iAttribId As Long, ByVal Val As Double) As Long
Private Declare PtrSafe Function XPRS_mse_getlasterror_C Lib "XPRS.DLL" Alias "XPRS_mse_getlasterror" (ByVal mse As LongPtr, ByRef iMsgCode As Long, ByVal msg As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long
Declare PtrSafe Function XPRS_mse_setsolbasename Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal sSolutionBaseName As String) As Long
Private Declare PtrSafe Function XPRS_mse_getsolbasename_C Lib "XPRS.DLL" Alias "XPRS_mse_getsolbasename" (ByVal mse As LongPtr, ByVal sname As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long
Declare PtrSafe Function XPRS_mse_setcbgetsolutiondiff Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_mse_getsolutiondiff As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRS_mse_getcbgetsolutiondiff Lib "XPRS.DLL" (ByVal mse As LongPtr, ByRef f_mse_getsolutiondiff As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRS_mse_addcbgetsolutiondiff Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_mse_getsolutiondiff As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRS_mse_removecbgetsolutiondiff Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_mse_getsolutiondiff As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRS_mse_setcbmsghandler Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRS_mse_getcbmsghandler Lib "XPRS.DLL" (ByVal mse As LongPtr, ByRef f_msghandler As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRS_mse_addcbmsghandler Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRS_mse_removecbmsghandler Lib "XPRS.DLL" (ByVal mse As LongPtr, ByVal f_msghandler As LongPtr, ByVal p As String) As Long

Declare PtrSafe Function XPRS_bo_create Lib "XPRS.DLL" (ByRef p_object As LongPtr, ByVal prob As LongPtr, ByVal isoriginal As Long) As Long
Declare PtrSafe Function XPRS_bo_destroy Lib "XPRS.DLL" (ByVal obranch As LongPtr) As Long
Declare PtrSafe Function XPRS_bo_store Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByRef p_status As Long) As Long
Declare PtrSafe Function XPRS_bo_addbranches Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal nbranches As Long) As Long
Declare PtrSafe Function XPRS_bo_getbranches Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByRef p_nbranches As Long) As Long
Declare PtrSafe Function XPRS_bo_setpriority Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ipriority As Long) As Long
Declare PtrSafe Function XPRS_bo_setpreferredbranch Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long) As Long
Declare PtrSafe Function XPRS_bo_addbounds Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long, ByVal nbounds As Long, cbndtype As Byte, mbndcol As Long, dbndval As Double) As Long
Declare PtrSafe Function XPRS_bo_getbounds Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long, ByRef p_nbounds As Long, ByVal nbounds_size As Long, cbndtype As Byte, mbndcol As Long, dbndval As Double) As Long
Declare PtrSafe Function XPRS_bo_addrows Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long, ByVal nrows As Long, ByVal nelems As Long, crtype As Byte, drrhs As Double, mrbeg As Long, mcol As Long, dval As Double) As Long
Declare PtrSafe Function XPRS_bo_getrows Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long, ByRef p_nrows As Long, ByVal nrows_size As Long, ByRef p_nelems As Long, ByVal nelems_size As Long, crtype As Byte, drrhs As Double, mrbeg As Long, mcol As Long, dval As Double) As Long
Declare PtrSafe Function XPRS_bo_addcuts Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByVal ibranch As Long, ByVal ncuts As Long, mcutind As Long) As Long
Declare PtrSafe Function XPRS_bo_getid Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByRef p_id As Long) As Long
Private Declare PtrSafe Function XPRS_bo_getlasterror_C Lib "XPRS.DLL" Alias "XPRS_bo_getlasterror" (ByVal obranch As LongPtr, ByRef iMsgCode As Long, ByVal msg As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long
Declare PtrSafe Function XPRS_bo_validate Lib "XPRS.DLL" (ByVal obranch As LongPtr, ByRef p_status As Long) As Long


Declare PtrSafe Function XPRSsetcbmessageVB Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_message As LongPtr, ByRef p As LongPtr) As Long

' OS-provided utility functions we'll use
Private Declare PtrSafe Sub CopyMemory Lib "kernel32" Alias "RtlMoveMemory" (Destination As Any, Source As Any, ByVal Length as Long)

' XPRS-provided utility functions we'll use
Private Declare PtrSafe Function CStrLen Lib "XPRS.DLL" Alias "XPRS_vbhelp_strlen" (ByVal lpStr As LongPtr, ByRef r_StrLen As Long) As Long

' Declarations of functions that allow NULL pointers to be passed

Declare PtrSafe Function XPRSloadlpr Lib "XPRS.DLL" Alias "XPRSloadlp" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, ByVal drange As String, dobj As Double, mstart As Long, ByVal mnel As String, mrwind As Long, dmatval As Double, dlb As Double, dub As Double) As Long
Declare PtrSafe Function XPRSloaddirsx Lib "XPRS.DLL" Alias "XPRSloaddirs" (ByVal prob As LongPtr, ByVal ndirs As Long, mcols As Long, mpri As Long, ByVal sbr As String, ByVal dupc As String, ByVal ddpc As String) As Long
Declare PtrSafe Function XPRSgetsolx Lib "XPRS.DLL" Alias "XPRSgetsol" (ByVal prob As LongPtr, dx As Double, ByVal dslack As String, ByVal dual As String, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetsolslack Lib "XPRS.DLL" Alias "XPRSgetsol" (ByVal prob As LongPtr, ByVal dx As String, dslack As Double, ByVal dual As String, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetsoldual Lib "XPRS.DLL" Alias "XPRSgetsol" (ByVal prob As LongPtr, ByVal dx As String, ByVal dslack As String, dual As Double, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetsoldj Lib "XPRS.DLL" Alias "XPRSgetsol" (ByVal prob As LongPtr, ByVal dx As String, ByVal dslack As String, ByVal dual As String, dj As Double) As Long
Declare PtrSafe Function XPRSgetpresolvesolx Lib "XPRS.DLL" Alias "XPRSgetpresolvesol" (ByVal prob As LongPtr, dx As Double, ByVal dslack As String, ByVal dual As String, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetpresolvesolslack Lib "XPRS.DLL" Alias "XPRSgetpresolvesol" (ByVal prob As LongPtr, ByVal dx As String, dslack As Double, ByVal dual As String, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetpresolvesoldual Lib "XPRS.DLL" Alias "XPRSgetpresolvesol" (ByVal prob As LongPtr, ByVal dx As String, ByVal dslack As String, dual As Double, ByVal dj As String) As Long
Declare PtrSafe Function XPRSgetpresolvesoldj Lib "XPRS.DLL" Alias "XPRSgetpresolvesol" (ByVal prob As LongPtr, ByVal dx As String, ByVal dslack As String, ByVal dual As String, dj As Double) As Long
Declare PtrSafe Function XPRSgetglobalx Lib "XPRS.DLL" Alias "XPRSgetglobal" (ByVal prob As LongPtr, ByRef ngents As Long, ByRef nsets As Long, sgtype As Byte, mgcols As Long, ByVal dlim As String, ByVal sstype As String, ByVal msstart As String, ByVal mscols As String, ByVal dref As String) As Long
Declare PtrSafe Function XPRSaddrowsr Lib "XPRS.DLL" Alias "XPRSaddrows" (ByVal prob As LongPtr, ByVal nrows As Long, ByVal ncoeffs As Long, srowtype As Byte, drhs As Double, ByVal drng As String, mstart As Long, mclind As Long, dmatval As Double) As Long

' Utility function to create a VB string when given the pointer to a C string
Private Function StringFromPointer(StringPointer As LongPtr) As String
  If StringPointer=0 Then
    StringFromPointer = vbNullString
  Else
  	Dim string_length As Long
  	CStrLen StringPointer, string_length
  	Dim str As String
  	str = Space$(string_length)
  	CopyMemory ByVal str, ByVal StringPointer, string_length
  	StringFromPointer = str
  End If
End Function


' VB wrappers for functions that need them
Function XPRSgetbanner(ByRef banner As String) As Long
  Dim rval As Long
  ' Performing any necessary type conversions on input arguments
  Dim c_banner As String * 255
  ' Call XPRS.DLL
  rval = XPRSgetbanner_C(c_banner)
  ' Performing any necessary type conversions on output arguments
  If InStr(1, c_banner, vbNullChar) > 1 Then
    banner = Left(c_banner, InStr(1, c_banner, vbNullChar) - 1)
  End If
  XPRSgetbanner = rval
End Function


Function XPRSgetversion(ByRef version As String) As Long
  Dim rval As Long
  ' Performing any necessary type conversions on input arguments
  Dim c_version As String * 255
  ' Call XPRS.DLL
  rval = XPRSgetversion_C(c_version)
  ' Performing any necessary type conversions on output arguments
  If InStr(1, c_version, vbNullChar) > 1 Then
    version = Left(c_version, InStr(1, c_version, vbNullChar) - 1)
  End If
  XPRSgetversion = rval
End Function


Function XPRSlicense(ByRef i1 As Long, ByRef c1 As String) As Long
  Dim rval As Long
  ' Performing any necessary type conversions on input arguments
  Dim c_c1 As String * 255
  c_c1 = c1
  Mid(c_c1, Len(c1) + 1, 1) = vbNullChar
  ' Call XPRS.DLL
  rval = XPRSlicense_C(i1, c_c1)
  ' Performing any necessary type conversions on output arguments
  If InStr(1, c_c1, vbNullChar) > 1 Then
    c1 = Left(c_c1, InStr(1, c_c1, vbNullChar) - 1)
  End If
  XPRSlicense = rval
End Function


